--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
 
         <!--Aqui va los iconos-->
         <article id="icon">
-            <a href="mailto:wilkmagallanes@gmail.com"><img class="pequena" src="https://github.com/IsrraelMagallanes/mi-proyecto/tree/master/img/mail.png" alt="Email"></a>
-            <a href="https://www.github.com"><img class="pequena" src="../proyecto-1-cod-latam/img/github.png" alt="Github"></a>
-            <a href="https://www.linkedin.com/in/wilkmagallanes/"><img class="pequena" src="../proyecto-1-cod-latam/img/linkedin.png" alt="Linkedin"></a>
+            <a href="mailto:wilkmagallanes@gmail.com"><img class="pequena" src="../proyecto-1-cod-latam/img/mail.png" alt="Email"></a>
+            <a href="https://www.github.com" target="_blank"><img class="pequena" src="../proyecto-1-cod-latam/img/github.png" alt="Github"></a>
+            <a href="https://www.linkedin.com/in/wilkmagallanes/" target="_blank"><img class="pequena" src="../proyecto-1-cod-latam/img/linkedin.png" alt="Linkedin"></a>
         </article>
         <br>
         <br>
