--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
       </style>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles.css" type="text/css" media="screen">
 </head>
 <body>
     <header>
         <nav>
             <ul class="horizontal">
-                <li><a href="#inicio"><img width="150" src="../proyecto-1-cod-latam/img/Logo.png" alt="Logo"/></a></li>
+                <li><img width="150" src="img/Logo.png" alt="Logo"/></li>
                 <li><a href="#inicio">Inicio</a></li>
                 <li><a href="#contacto">Contacto</a></li>
             </ul>
@@ -62,9 +62,9 @@
 
         <!--Aqui va los iconos-->
         <article id="icon">
-            <a href="mailto:wilkmagallanes@gmail.com"><img class="pequena" src="../proyecto-1-cod-latam/img/mail.png" alt="Email"></a>
-            <a href="https://www.github.com" target="_blank"><img class="pequena" src="../proyecto-1-cod-latam/img/github.png" alt="Github"></a>
-            <a href="https://www.linkedin.com/in/wilkmagallanes/" target="_blank"><img class="pequena" src="../proyecto-1-cod-latam/img/linkedin.png" alt="Linkedin"></a>
+            <a href="mailto:wilkmagallanes@gmail.com"><img class="mail" src="img/mail.png" alt="Email"></a>
+            <a href="https://www.github.com" target="_blank"><img class="gato" src="img/github.png" alt="Github"></a>
+            <a href="https://www.linkedin.com/in/wilkmagallanes/" target="_blank"><img class="linked" src="img/linkedin.png" alt="Linkedin"></a>
         </article>
         <br>
         <br>
