--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <br>
                     </p>
                     <br>
-                    <a class="boton" href="../proyecto-1-cod-latam/doc/CV Isrrael Magallanes 2023.pdf" target="_blank">Descarga mi CV</a>
+                    <a class="boton" href="doc/CV Isrrael Magallanes 2023.pdf" target="_blank">Descarga mi CV</a>
                     <br>
                     <br>
                     <br>
