--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
         <nav>
             <ul class="horizontal">
-                <li><img width="150" src="img/Logo.png" alt="Logo"/></li>
+                <li><img width="150" src="mi-proyecto/img/Logo.png" alt="Logo"/></li>
                 <li><a href="#inicio">Inicio</a></li>
                 <li><a href="#contacto">Contacto</a></li>
             </ul>
@@ -62,9 +62,9 @@
 
         <!--Aqui va los iconos-->
         <article id="icon">
-            <a href="mailto:wilkmagallanes@gmail.com"><img class="mail" src="img/mail.png" alt="Email"></a>
-            <a href="https://www.github.com" target="_blank"><img class="gato" src="img/github.png" alt="Github"></a>
-            <a href="https://www.linkedin.com/in/wilkmagallanes/" target="_blank"><img class="linked" src="img/linkedin.png" alt="Linkedin"></a>
+            <a href="mailto:wilkmagallanes@gmail.com"><img class="mail" src="mi-proyecto/img/mail.png" alt="Email"></a>
+            <a href="https://www.github.com" target="_blank"><img class="gato" src="mi-proyecto/img/github.png" alt="Github"></a>
+            <a href="https://www.linkedin.com/in/wilkmagallanes/" target="_blank"><img class="linked" src="mi-proyecto/img/linkedin.png" alt="Linkedin"></a>
         </article>
         <br>
         <br>
