--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
         <nav>
             <ul class="horizontal">
-                <li><img width="150" src="../mi-proyecto/img/Logo.png" alt="Logo"/></li>
+                <li><img width="150" src="mi-proyecto/img/Logo.png" alt="Logo"/></li>
                 <li><a href="#inicio">Inicio</a></li>
                 <li><a href="#contacto">Contacto</a></li>
             </ul>
